Fixed loader alignment

--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -1,8 +1,9 @@
 #loader {
     position: fixed;
+    top:0; right:0; left:0; bottom:0;
     z-index:5;
     width: 100%;
-    height: 300vw;
+    height: 200vw;
     background: $color-background-dark;
     display: flex;
     flex-direction: column;
@@ -13,19 +14,19 @@
     font-size: 300%;
     & .logo {
         position: relative;
-        bottom: 60vw;
+        bottom: 40vw;
     }
     & .fa-spinner {
         position: relative;
         animation: spinner 2s infinite ease-in-out;
         margin-top: 50px;
-        bottom: 60vw;
+        bottom: 40vw;
     }
     @include tablet-version {
         height: 200vw;
     }
     @include desktop-version {
-        height: 200vw;
+        height: 175vw;
     }
 }
 
